--- a/assets/css/Home/services.css
+++ b/assets/css/Home/services.css
@@ -35,7 +35,7 @@
         .col-content1 {
         position: relative;
         width: 100%;
-        height: 600px;
+        height: 650px;
         border-radius: 5px;
         display: flex;
         flex-direction: column;
@@ -55,22 +55,31 @@
         box-shadow: 20px 20px 48px 0 rgba(230, 230, 230, 0.3);
         object-fit: cover;
         object-position: center;
+
         }
         
         .content1 .text-container{
         width: 400px;
         margin: 0 auto;
+        height: auto;
         padding: 20px;
-        padding-left: 30px;
+        /* padding-left: 30px; */
         }
         
         .content1 .text-container h2{
         font-weight:600;
         color: black;
         font-family: 'Poppins', helvetica, sans-serif;
-        margin-bottom: 10px;
         font-size: 42px;
         text-transform: uppercase;
+        margin-bottom: 40px;
+        }
+
+        .content1 .text-container h2 span{
+            font-weight:600;
+            color: rgb(170, 170, 170);
+            font-family: 'Poppins', helvetica, sans-serif;
+            font-size: 42px;
         }
         
         .content1 .text-container p{
@@ -95,14 +104,14 @@
         font-weight:400;
         color: white;
         font-family: 'Source Sans Pro', sans-serif;
-        background-color: rgb(250, 52, 52);
+        background-color: rgb(0, 0, 0);
         transition: 0.2s ease-in-out;
         border-radius: 5px;
         box-shadow: 20px 20px 48px 0 rgba(230, 230, 230, 0.3);
         }
         
         .lrn-btn:hover{
-        background-color: rgb(202, 37, 37);
+        background-color: rgb(0, 0, 0);
         }
         
         
