--- a/assets/css/Home/services.css
+++ b/assets/css/Home/services.css
@@ -1,9 +1,11 @@
 @import "../components/base.css";
 
-.services{
+/* .services{
     height: 100vh;
     width: 100%;
-}
+ 
+    
+} */
 
 
     /*
@@ -19,6 +21,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+     
         }
         
         /*
@@ -35,7 +38,7 @@
         .col-content1 {
         position: relative;
         width: 100%;
-        height: 650px;
+        height: 600px;
         border-radius: 5px;
         display: flex;
         flex-direction: column;
