--- a/assets/css/Home/projects.css
+++ b/assets/css/Home/projects.css
@@ -1,7 +1,59 @@
 @import "../components/base.css";
 
-.projects{
-    height: 700px;
-    width: 100%;
-    background-color: green;
-}
+    .projects{
+        height: auto;
+        width: 100%;
+        background-color: rgb(255, 255, 255);
+
+        padding: 50px 0;
+        color: black;
+        display: grid;
+        place-items: center;
+    }
+    
+    .projects h2{
+        font-family: 'Poppins', helvetica, sans-serif;
+        font-size: 20px;
+        font-weight: 500;
+    }
+
+    .projects .col {
+    width: 200px;
+    height: 500px;
+    padding: 20px;
+    }
+
+    .projects .col img{
+        width: 100%;
+        height: 300px;
+    }
+
+
+    .projects .col p {
+        font-family: 'Poppins', helvetica, sans-serif;
+        font-size: 38px;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+
+
+
+
+
+
+
+
+
+    @media screen and (min-width: 1024px){
+        .projects .container{
+            width: 80%;
+        }
+
+        .container, .row-container{
+        max-width: 1140px;
+        }
+        
+        .col-lg-3{
+        flex: 0 0 33%;
+        }
+    }
