--- a/assets/css/Home/tools.css
+++ b/assets/css/Home/tools.css
@@ -1,7 +1,7 @@
 @import "../components/base.css";
 
-.projects{
-    height: 700px;
+.tools{
+    height: 300px;
     width: 100%;
-    background-color: green;
+    background-color: red;
 }
