--- a/assets/css/components/header.css
+++ b/assets/css/components/header.css
@@ -12,19 +12,22 @@
         justify-content: right;
     }
 
-    header h2{
+    header ul{
         display: flex;
-        /* font-family: 'Source Sans Pro', sans-serif;        */
+        list-style: none;
+    }
+
+    header ul li{
         font-family: 'Poppins', helvetica, sans-serif;
-        font-size: 17px;
+        font-size: 15px;
         transition: 0.2s ease-in-out;
         cursor: pointer;
     }
 
-    header h2:hover{
-        color: rgb(88, 88, 88);
+    header ul li + li{
+        margin-left: 35px;
     }
 
-    header h2 i{
-        margin-right: 8px;
+    li:hover{
+        color: rgb(88, 88, 88);
     }
